fix: ajusta redirect-url do oauth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-conatus.oauth2.callback.url = ${CALLBACK_URL:https://webapp.conatus.app.br}
+conatus.oauth2.callback.url = ${CALLBACK_URL:https://webapp.conatus.app/conatus-adm/}
 
 spring.security.oauth2.client.registration.google.client-id = 462047453989-tbmh1d4c7da5feetta325723i82k2483.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.clientSecret = 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
+spring.security.oauth2.client.registration.google.redirect-uri= https://webapp.conatus.shop/login/oauth2/code/{registrationId}
