fix: ajusta para servico atuar com oauth e token jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,18 @@
-conatus.oauth2.callback.url = ${CALLBACK_URL:https://webapp.conatus.app/conatus-adm/}
+conatus.security.oauth2.callback.url = ${CALLBACK_URL:https://webapp.conatus.app/conatus-adm}
+conatus.security.jwt.secret = ${JWT_SECRET:RDGMEM2VCIgaiSqOfVzBAjPJm}
 
 spring.security.oauth2.client.registration.google.client-id = 462047453989-tbmh1d4c7da5feetta325723i82k2483.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.clientSecret = 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
-spring.security.oauth2.client.registration.google.redirect-uri= https://webapp.conatus.shop/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.redirect-uri= {baseUrl}/login/oauth2/code/{registrationId}
+
+spring.h2.console.path = /h2-console
+spring.h2.console.enabled = true
+
+spring.datasource.url = jdbc:h2:mem:testdb
+spring.datasource.username = sa
+spring.datasource.password=
+
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
+#spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto = create-drop
