--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.datasource.password=
 
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
-#spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto = none
